--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,10 +7,10 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.19.9",
-    "hono": "^4.11.9",
-    "zod": "^4.3.6",
+    "@repo/db": "*",
     "@repo/rpc": "*",
-    "@repo/db": "*"
+    "hono": "^4.11.9",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/node": "^25.2.2",
