--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,15 +1,26 @@
 {
   "name": "@repo/db",
   "version": "1.0.0",
+  "private": true,
   "type": "module",
   "main": "./src/index.ts",
   "exports": {
     ".": "./src/index.ts"
   },
+  "scripts": {
+    "migrate": "prisma migrate dev",
+    "seed": "prisma db seed",
+    "studio": "prisma studio"
+  },
+  "prisma": {
+    "seed": "node --loader ts-node/esm prisma/seed.ts"
+  },
   "dependencies": {
     "@prisma/client": "^6.16.1"
   },
   "devDependencies": {
-    "prisma": "^6.16.1"
+    "prisma": "^6.16.1",
+    "ts-node": "^10.9.2"
   }
 }
+
