--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -10,7 +10,8 @@
     "@repo/db": "*",
     "@repo/rpc": "*",
     "hono": "^4.11.9",
-    "zod": "^4.3.6"
+    "zod": "^4.3.6",
+    "@repo/shared":"*"
   },
   "devDependencies": {
     "@types/node": "^25.2.2",
