--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts"
+     "dev": "node --trace-warnings --loader ts-node/esm ./src/server.ts"
+
+
   },
   "dependencies": {
     "@hono/node-server": "^1.19.9",
